<resources>
    <string name="app_name">Foody-Modern_Food_Recipe_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes Fragment</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="primal">Primal</string>
    <string name="meal_type">Meal Type</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="soup">Soup</string>
    <string name="diet_type">Diet Type</string>
    <string name="vegan">Vegan</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="main_course">Main course</string>
    <string name="side_dish">Side dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="search">search</string>
    <string name="consistency">Consistency</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="_100">100</string>
    <string name="original">Original</string>
    <string name="grams">Grams</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="share">menu</string>
</resources>