<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/strokeColor"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ingredient_background"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/cardBackgroundColor">


            <View
                android:id="@+id/white_background"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ingredientImageView"
                android:layout_width="115dp"
                android:layout_height="152dp"

                android:layout_marginStart="8dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/white_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/ingredient_main"
                android:layout_width="254dp"
                android:layout_height="33dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/courgette"
                android:text="@string/textview"
                android:textColor="@color/ingredient_title_color"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/white_background"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ingredient_unit_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_100"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/ingredient_main"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_main" />

            <TextView
                android:id="@+id/ingredient_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/grams"
                app:layout_constraintBottom_toTopOf="@+id/ingredient_consistency"
                app:layout_constraintStart_toEndOf="@+id/ingredient_unit_num"
                app:layout_constraintTop_toTopOf="@+id/ingredient_unit_num" />

            <TextView
                android:id="@+id/ingredient_consistency"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="8dp"
                android:text="@string/consistency"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ingredientImageView"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_unit_num" />

            <TextView
                android:id="@+id/ingredient_original"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="8dp"
                android:text="@string/original"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ingredientImageView"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_consistency" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>